--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ h1 {
     margin: 50px 0 50px 0;
 }
 
+img {
+    height: 60%;
+    width: 60%;
+    object-fit: contain;
+}
+
 .board {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -29,6 +35,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 200px;
+    width: 200px;
 }
 
 .starter {
