--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ img {
     margin-top: 50px;
     text-align: center;
     font-family: 'Work Sans', sans-serif;
+    position: relative;
 }
 
 .main {
