--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ img {
     object-fit: contain;
 }
 
-.board {
+section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
